--- a/content/blogs/My Story.Rmd
+++ b/content/blogs/My Story.Rmd
@@ -1,10 +1,18 @@
 ---
-title: "My Story"
-author: "Xenia"
-date: 2020-12-01T21:13:14-05:00
-categories: ["R"]
-tags: ["R Markdown", "plot", "regression"]
---- 
+categories:
+- ""
+- ""
+date: "2017-10-31T22:26:13-05:00"
+description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
+  sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
+  sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+  consequat tincidunt. Vivamus et sagittis tempus.
+draft: false
+image: pic08.jpg
+keywords: ""
+slug: my_story
+title: My Story
+---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(collapse = TRUE)
