--- a/content/blogs/ISC Alumni.Rmd
+++ b/content/blogs/ISC Alumni.Rmd
@@ -9,28 +9,24 @@ image: pic09.jpg
 keywords: ""
 slug: isc_alumni
 title: ISC Alumni
+#how to change backgroun color??
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## About ISC Alumni
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+As the alumni organization of the International Students' Committee (ISC), we provide a platform to promote bonding and sharing of experiences among ISC alumni, to foster connections among the different generations of ISC, and to advance the ISC. We organise speaker series, workshops, casual get-togethers and much more.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+The ISC is the yearly changing organising committee of the St. Gallen Symposium, an international two-day conference taking place at the University of St.Gallen (Switzerland) in May. Every year key decision-makers from the fields of economics, politics, science, and society take part in the symposium to meet and exchange with the next generation of leaders. The entire conference is organised by the International Students' Committee. It's a Team of 35 students from the University of St.Gallen who pause their studies for 10 months to engage in the realization of an intergenerational dialogue.
 
-```{r cars}
-summary(cars)
-```
+Want to be a part of it? Apply for the 2022 ISC Team here: https://www.symposium.org/join-isc-team
 
-## Including Plots
+SGS website: https://www.symposium.org/
 
-You can also embed plots, for example:
+linkedIn: https://www.linkedin.com/groups/2135824/
+website: https://www.isc-alumni.org
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
