--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -13,6 +13,35 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 #why is subtitle not showing?
 #why is picture not showing?
 ---
+<style>
+.parallax { 
+    /* The image used */
+    background-image: url("https://github.com/holtzy/R-Markdown-Parallax/raw/master/overview_RGG_faded.png");
+
+    /* Set a specific height */
+    height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.myimg{
+    width: 10%;
+    color: red;
+    position: absolute;
+    top: 150px;
+    left: 45%;
+}
+</style>
+
+<!-- Container element -->
+<div class="parallax">
+    <a href="https://github.com/holtzy/R-Markdown-Parallax"> <img class="myimg" src="https://github.com/holtzy/R-Markdown-Parallax/raw/master/Rlogo.png"> </a>
+</div>
+
 
 ## Our Story
 
