--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -1,22 +1,7 @@
----
-categories:
-- ""
-- ""
-date: "2017-10-31T21:28:43-05:00"
-description: "Women for Women"
-draft: false 
-image: w4w.jpg
-keywords: ""
-slug: women_for_women
-title: The network for young women with big dreams.
-subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female community
-#why is subtitle not showing?
-#why is picture not showing?
----
 <style>
 .parallax { 
     /* The image used */
-    background-image: url("https://github.com/holtzy/R-Markdown-Parallax/raw/master/overview_RGG_faded.png");
+    background-image: w4w.jpg;
 
     /* Set a specific height */
     height: 400px; 
@@ -41,6 +26,22 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <div class="parallax">
     <a href="https://github.com/holtzy/R-Markdown-Parallax"> <img class="myimg" src="https://github.com/holtzy/R-Markdown-Parallax/raw/master/Rlogo.png"> </a>
 </div>
+---
+categories:
+- ""
+- ""
+date: "2017-10-31T21:28:43-05:00"
+description: "Women for Women"
+draft: false 
+image: w4w.jpg
+keywords: ""
+slug: women_for_women
+title: The network for young women with big dreams.
+subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female community
+#why is subtitle not showing?
+#why is picture not showing?
+---
+
 
 
 ## Our Story
