--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -16,6 +16,7 @@
 ---
 title: "<center><div class='mytitle'>R Markdown output with parallax</div></center>"
 author: "<center><div class='mysubtitle'>See the code on [github](https://github.com/holtzy/R-Markdown-Parallax). This tip is part of my [Pimp my RMD](https://holtzy.github.io/Pimp-my-rmd/) project.</div></center>"
+slug: women_for_women
 output:
   html_document:
       css: style.css
