--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -1,30 +1,16 @@
-#---
-#categories:
-#- ""
-#- ""
-#date: "2017-10-31T21:28:43-05:00"
-#description: "Women for Women"
-#draft: false 
-#image: w4w.jpg
-#keywords: ""
-#slug: women_for_women
-#title: The network for young women with big dreams.
-#subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female community
-#why is subtitle not showing?
-#why is picture not showing?
-#---
 ---
-title: "<center><div class='mytitle'>R Markdown output with parallax</div></center>"
-author: "<center><div class='mysubtitle'>See the code on [github](https://github.com/holtzy/R-Markdown-Parallax). This tip is part of my [Pimp my RMD](https://holtzy.github.io/Pimp-my-rmd/) project.</div></center>"
+categories:
+- ""
+- ""
+date: "2017-10-31T21:28:43-05:00"
+description: "Women for Women"
+draft: false 
+keywords: ""
 slug: women_for_women
-output:
-  html_document:
-      css: style.css
-      toc: FALSE
-      includes: 
-        before_body: header.html
----
+title: The network for young women with big dreams.
+subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female community
 
+---
 <style>
 .parallax { 
     /* The image used */
@@ -54,16 +40,26 @@ output:
 
 
 ## Our Story
+***
 
-Women for Women is a network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other.
+Women for Women is a female network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other. We offer women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.
 
-We are driven by the belief that women grow by empowering each other. We support women, who do not have a network yet with planning their long-term goals, achieving their ambitions, finding great opportunities and being ready when they arise.
-
-For female students, Women for Women is the female mentorship network that is the organisation for creating successful long-term relationships to achieve the mentee's long-term goals because we care about persolanized matching and fostering a great community.
 
 ## My Role
+***
 
-I am Head of Community, responsible to connect the mentees and mentors with each other, building long-term and sustainable connections.
+I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-togethers and other events. 
+
+.btn {
+    border-width: 0 0px 0px 0px;
+    font-weight: normal;
+    text-transform: ;
+}
+.btn-default {
+    color: #2ecc71;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
 
 LinkedIN: https://www.linkedin.com/company/women-for-women-inc/
 
