--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -44,36 +44,32 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 
 ## Our Story
 ***
-\begin{flushright}
+
 Women for Women is a female network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other. We offer women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.
-\end{flushright}
+
 
 ## My Role
 ***
 
-I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-togethers and other events. 
+I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-together and other events.
+
+## Caught Your Interest? Sign up today!
+***
+![We are stronger](C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg)
 
 
-{.tabset .tabset-fade .tabset-pills}
-.btn {
-    border-width: 0 0px 0px 0px;
-    font-weight: normal;
-    text-transform: ;
-}
-.btn-default {
-    color: #2ecc71;
-    background-color: #ffffff;
-    border-color: #ffffff;
-}
+<i class="fab fa-linkedin"></i>
 
 LinkedIN: https://www.linkedin.com/company/women-for-women-inc/
 
 Website/Sign up today: https://www.womenforwomen.ch/the-initiative
+url:https://www.linkedin.com/company/women-for-women-inc/
 
-<i class="fab fa-youtube"></i> Hans Rosling, ["200 Countries, 200 Years, 4 Minutes"](https://www.youtube.com/watch?v=jbkSRLYSojo){target=_blank}
-<i class="fab fa-youtube"></i>
+Button {.tabset .tabset-fade .tabset-pills}
 
 <i class="fab fa-linkedin-in"></i>
+
+
 
 
 
