--- a/content/blogs/My Story.Rmd
+++ b/content/blogs/My Story.Rmd
@@ -11,26 +11,36 @@ draft: false
 image: pic08.jpg
 keywords: ""
 slug: my_story
-title: My Story
+title: My Life in a Nutshell
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(collapse = TRUE)
 ```
 
-# R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+<div class = "row">
+  
+<div class = "col-md-4">
+<br><br>Since R Markdown use the [bootstrap framework](https://getbootstrap.com/docs/4.0/layout/grid/) under the hood. It is possible to benefit its powerful grid system. Basically, you can consider that your row is divided in 12 subunits of same width. You can then choose to use only a few of this subunits.
+</div>
+  
+<div class = "col-md-4">
+<br><br>Here, I use 3 subunits of size 4 (4x3=12). The last column is used for a plot. You can read more about the grid system [here](bootstrap grid system). I got this result showing the following code in my R Markdown document.
+</div>
+  
+<div class = "col-md-4">
+``{r, message=FALSE, echo=FALSE}
+ggplot( mtcars, aes(x=mpg)) + geom_histogram(fill="skyblue", alpha=0.5) + theme_minimal()
+``
+</div>
+</div>
 
-You can embed an R code chunk like this:
+# Swiss
 
-```{r cars}
-summary(cars)
-fit <- lm(dist ~ speed, data = cars)
-fit
-```
+Born and raised in Zurich, Switzerland, I comply with the stereotype of loving cheese, skiing, the mountains and generally the outdoors. See a few impressions of my life below
 
-# Including Plots
+
 
 You can also embed plots. See Figure \@ref(fig:pie) for example:
 
