--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -5,6 +5,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: "Women for Women"
 draft: false 
+image:
 keywords: ""
 slug: women_for_women
 title: The network for young women with big dreams.
@@ -41,22 +42,27 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
     <a href="https://github.com/holtzy/R-Markdown-Parallax"> <img class="myimg" src="https://github.com/holtzy/R-Markdown-Parallax/raw/master/Rlogo.png"> </a>
 </div>
 
+## Be part of a 1-to-1 mentoring and an incredibly strong female community
 
 ## Our Story
 ***
 
-Women for Women is a female network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other. We offer women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.
+Women for Women (W4W) is a female network connecting (future) female leaders. We are driven by the belief that women grow by empowering each other. W4W offers women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.
 
 
-## My Role
+## My Role***
+
+I am Head of Community, responsible for nurturing our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual gatherings and other events.
+
+
+## What we offer
 ***
 
-I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-together and other events.
+- Resources for industries, jobs, application processes, exchange semesters
+- Access to women from all over Europe with diverse backgrounds, roles and interests
+- Through our mentoring program you will be able to form meaningful, long-lasting relationships with other women
 
-## Caught Your Interest? Sign up today!
-***
-![We are stronger](C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg)
-
+![](C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg)
 
 <i class="fab fa-linkedin"></i>
 
