--- a/content/blogs/Women for Women.Rmd
+++ b/content/blogs/Women for Women.Rmd
@@ -62,15 +62,19 @@ I am Head of Community, responsible for nurturing our growing community by build
 - Access to women from all over Europe with diverse backgrounds, roles and interests
 - Through our mentoring program you will be able to form meaningful, long-lasting relationships with other women
 
+
+
 ![caption](C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg)
 
 <i class="fab fa-linkedin"></i>
 
 ```{r}
-tags$div(class = "submit",
-         tags$a(href = "www.google.com", 
-                "Learn More", 
-                target="_blank")
+shiny::fluidRow(
+  shinydashboard::box(title = "Intro Page", "Some description...", 
+      shiny::actionButton(inputId='ab1', label="Learn More", 
+                          icon = icon("th"), 
+                          onclick ="window.open('http://google.com', '_blank')")
+  )
 )
 ```
 
