--- a/content/blogs/ISC Alumni.Rmd
+++ b/content/blogs/ISC Alumni.Rmd
@@ -3,9 +3,9 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:26:09-05:00"
-description: Lorem Etiam Nullam
+description: A Second Family
 draft: false
-image: pic09.jpg
+image: iscfamily.jpg
 keywords: ""
 slug: isc_alumni
 title: ISC Alumni
