--- a/content/blogs/ISC Alumni.Rmd
+++ b/content/blogs/ISC Alumni.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:26:09-05:00"
 description: A Second Family
 draft: false
-image: iscfamily.jpg
+image: blogs/iscalumnii.jpg
 keywords: ""
 slug: isc_alumni
 title: ISC Alumni
