--- a/content/projects/Women for Women.Rmd
+++ b/content/projects/Women for Women.Rmd
@@ -12,44 +12,39 @@ slug: women_for_women
 categories:
 ---
 ## Be part of a 1-to-1 mentoring and an incredibly strong female community
-```{r picture, echo=FALSE, out.width="30%"}
+```{r picture, echo=FALSE, out.width="50%"}
 knitr::include_graphics("/img/blogs/w4wlogo.jpg",error =FALSE)
 
 ```
 ## Our Story
 ***
-
 Women for Women (W4W) is a female network connecting (future) female leaders. We are driven by the belief that women grow by empowering each other. W4W offers women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.
 
 
 ## My Role
 ***
-
 I am Head of Community, responsible for nurturing our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual gatherings and other events.
 
 
 ## What we offer
 ***
-
 - Resources for industries, jobs, application processes, exchange semesters
 - Access to women from all over Europe with diverse backgrounds, roles and interests
 - Through our mentoring program you will be able to form meaningful, long-lasting relationships with other women
 
 # Our next event:
-```{r picture, echo=FALSE, out.width="30%"}
+```{r picture, echo=FALSE, out.width="50%"}
 knitr::include_graphics("/img/blogs/w4wevent.jpg",error =FALSE)
 ```
 
+# Caught your interest? Sign up!
+```{r picture, echo=FALSE, out.width="50%"}
+knitr::include_graphics("/img/blogs/w4w2.jpg",error =FALSE)
+```
 
-![caption](C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg)
+    [Sign up here](https://www.womenforwomen.ch/the-initiative)  [LinkedIn](https://www.linkedin.com/company/women-for-women-inc/)
 
 
-
-
-LinkedIN: https://www.linkedin.com/company/women-for-women-inc/
-
-Website/Sign up today: https://www.womenforwomen.ch/the-initiative
-url:https://www.linkedin.com/company/women-for-women-inc/
 
 
 
