--- a/content/projects/homework3.Rmd
+++ b/content/projects/homework3.Rmd
@@ -5,12 +5,11 @@ categories:
 date: "2017-10-31T22:26:09-05:00"
 description: Analytics and Visualisation
 draft: false
-image: iscalumni.jpg
+#image: iscalumni.jpg
 keywords: ""
 slug: analytics_visualisation
-title: Hypothesis Testing, Correlation Analysis, and Regressions in Practice
+title: Hypothesis Testing, Correlation Analysis, and Regressions
 ---
-
 
 ```{r, setup, echo=FALSE}
 knitr::opts_chunk$set(
